--- a/app/views/admins/calendars/_edit.html.erb
+++ b/app/views/admins/calendars/_edit.html.erb
@@ -14,7 +14,7 @@
       <%= f.datetime_field :start_time %>〜<%= f.datetime_field :finish_time %>
     </div>
     <div class="row justify-content-center pb-3">
-      <%= f.submit "保存", class: "btn btn-dark" %>
+      <%= f.submit "保存", class: "modal-calendar-submit btn btn-dark" %>
     </div>
   <% end %>
 </div>
