--- a/app/views/admins/calendars/_new.html.erb
+++ b/app/views/admins/calendars/_new.html.erb
@@ -7,10 +7,16 @@
     <div class="modal-content">
       <%= form_with model: calendar, url: admins_calendars_path, local: true do |f| %>
         <div class="container">
+          
+          <div class="row">
+            <h2 style="padding-top: 20px; margin: 0 auto; font-weight: bold;">スケジュール登録</h2>
+          </div>
+          
+          <div style="padding: 20px 0 10px 0;">
+            <%= render 'layouts/error_messages', model: calendar %>
+          </div>
 
-          <%= render 'layouts/error_messages', model: calendar %>
-
-          <div class="row justify-content-center pt-3 pb-3">
+          <div class="row justify-content-center pb-3">
             <%= f.text_field :title, :size=> "53", placeholder: "スケジュール名" %>
           </div>
           <div class="row justify-content-center pb-3">
@@ -20,7 +26,7 @@
             <%= f.datetime_field :start_time %>〜<%= f.datetime_field :finish_time %>
           </div>
           <div class="row justify-content-center pb-3">
-            <%= f.submit "登録", class: "btn btn-dark" %>
+            <%= f.submit "登録", class: "modal-calendar-submit btn btn-dark" %>
           </div>
         </div>
       <% end %>
