--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -77,7 +77,7 @@
                 <th>更新日時</th>
                 <td><%= estate.updated_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
                 <td>
-                  <%= link_to "編集", edit_admins_estate_path(estate), class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %>
+                  <%= link_to "編集", edit_admins_estate_path(estate), class: "edit btn-sm btn-outline-secondary", style: "text-decoration: none;" %>
                 </td>
               </tr>
               <tr>
@@ -88,7 +88,7 @@
                   <% end %>
                 </td>
                 <td>
-                  <%= link_to "削除", admins_estate_destroy_path(estate), method: :patch, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;", data: { confirm: '削除してよろしいですか？' } %>
+                  <%= link_to "削除", admins_estate_destroy_path(estate), method: :patch, class: "edit btn-sm btn-outline-secondary", style: "text-decoration: none;", data: { confirm: '削除してよろしいですか？' } %>
                 </td>
               </tr>
             </table>
@@ -98,9 +98,9 @@
     <% end %>
   <% else %>
     <% if @search_params.present? %>
-      <div style="text-align: center; padding-top: 60px; font-size: 25px; font-weight: bold;">検索条件に該当する入稿物件はございません</div>
+      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">検索条件に該当する入稿物件はございません</div>
     <% else %>
-      <div style="text-align: center; padding-top: 60px; font-size: 25px; font-weight: bold;">入稿物件はございません</div>
+      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">入稿物件はございません</div>
     <% end %>
   <% end %>
 </div>
