--- a/app/views/admins/researches/index.html.erb
+++ b/app/views/admins/researches/index.html.erb
@@ -12,25 +12,25 @@
         <ul class="navbar-nav">
         <% if admin_signed_in? %>
           <li class="nav-item">
-            <%= link_to "物件入稿", new_admins_estate_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "物件入稿", new_admins_estate_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "物件一覧", admins_estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "物件一覧", admins_estates_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "会員一覧", admins_customers_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "会員一覧", admins_customers_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "お問い合わせ一覧", admins_researches_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "お問い合わせ一覧", admins_researches_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "カレンダー", admins_calendars_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "カレンダー", admins_calendars_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
           <li class="nav-item">
-            <%= link_to "会員ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+            <%= link_to "会員ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
           </li>
         <% end %>
         </ul>
