--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -28,7 +28,7 @@
                   <%= render "customers/favorites/favorite", estate: estate %>
                 </div>
               <% else %>
-                <div class="favorite" style="font-size: 22px;">
+                <div style="font-size: 22px;">
                   <i class="fas fa-building"></i><%= estate.favorites.count %>
                 </div>
               <% end %>
