--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -41,13 +41,15 @@
     </div>
   </div>
 
+  <div style="padding-top: 50px; text-align: center; font-size: 20px; font-weight: bold; color: red">
+    <%= flash[:research_new] %>
+  </div>
+
   <% if customer_signed_in? %>
-    <div style="text-align: center; padding: 100px 0;">
-      <%= link_to "お問い合わせ", new_estate_research_path(@estate), class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
-    </div>
+    <%= render "customers/estates/new", research: @research, estate: @estate %>
   <% else %>
-    <div style="text-align: center; padding: 100px 0;">
-      <%= link_to "お問い合わせ", new_customer_session_path, class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
+    <div style="text-align: center; padding: 50px 0 70px 0;">
+      <%= link_to "お問い合わせする", new_customer_session_path, class: "search btn-sm btn-outline-secondary", style: "text-decoration: none; padding: 20px 60px;" %>
     </div>
   <% end %>
 
@@ -57,7 +59,7 @@
         <p>お問い合わせするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
       </div>
       <div class="col" style="padding-top: 28px;">
-        <%= link_to "ログイン", new_customer_session_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "ログイン", new_customer_session_path, class: "edit btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </div>
     </div>
     <div class="row">
@@ -65,7 +67,7 @@
         <p>お問い合せするには会員登録が必要です。<br/>会員登録をする方は会員登録へ→</p>
       </div>
       <div class="col" style="padding-top: 28px;">
-        <%= link_to "会員登録", new_customer_registration_path, class: "edit btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "会員登録", new_customer_registration_path, class: "edit btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </div>
     </div>
   <% end %>
