--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -7,35 +7,35 @@
       <ul class="navbar-nav">
       <% if customer_signed_in? %>
       <li class="nav-item">
-        <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "マイページ", customers_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "マイページ", customers_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-          <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+          <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
         </li>
       <% else %>
       <li class="nav-item">
-        <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "新規登録", new_customer_registration_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "新規登録", new_customer_registration_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", style: "font-size: 20px; text-decoration: none;" %>
       </li>
       <% end %>
       </ul>
