--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,8 +1,11 @@
 <%= render "customers/customers/header" %>
 
-<div style="text-align: center; padding: 150px 0 50px 0; font-size: 40px;">会員登録</div>
+<div style="text-align: center; padding: 150px 0 30px 0; font-size: 35px; font-weight: bold;">会員登録</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
+
+  <div style="text-align: center; color: red">
+    <%= render "customers/shared/error_messages", resource: resource %>
+  </div>
 
   <div class="container">
     <div class="row pb-4">
@@ -33,7 +36,7 @@
       <%= f.submit "登録", class: "search" %>
     </div>
     <div class="row">
-      <div class="col text-right" style="margin-right: 190px; padding-bottom: 100px;">
+      <div class="col text-right" style="margin-right: 190px; padding-bottom: 100px; font-size: 19px;">
         <%= link_to "ログインページへ", new_customer_session_path %>
       </div>
     </div>
