--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if model.errors.any? %>
   <% model.errors.full_messages.each do |message| %>
-    <p style="text-align: center; color: red">
+    <p style="text-align: center; color: red;">
       <%= message %>
     </p>
   <% end %>
