--- a/app/views/admins/favorites/index.html.erb
+++ b/app/views/admins/favorites/index.html.erb
@@ -1,10 +1,15 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<div style="text-align: center; padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
-  <%= @customer.name %> 様のお気に入り物件一覧
-</div>
-
 <div class="container" style="margin-bottom: 20px;">
+  <div style="text-align: center; word-break: break-all; overflow-wrap: break-word; padding-top: 130px; font-size: 30px; font-weight: bold;">
+    <div style="display: inline-block; text-align: left;">
+      <%= @customer.name %> 様
+    </div>
+  </div>
+  <div style="text-align: center; padding-bottom: 50px; font-size: 30px; font-weight: bold;">
+    お気に入り物件一覧
+  </div>
+
   <% if @favorites.present? %>
     <% @favorites.each do |favorite| %>
       <div class="card shadow" style="margin-bottom: 30px;">
