--- a/app/views/admins/estates/show.html.erb
+++ b/app/views/admins/estates/show.html.erb
@@ -1,10 +1,15 @@
 <%= render "admins/customers/header", researches: @research %>
 
-<div style="text-align: center; padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
-   <%= @estates.name %>　<%= @estates.room_number %>号室のお問い合わせ一覧
-</div>
-
 <div class="container" style="margin-bottom: 20px;">
+  <div style="text-align: center; padding-top: 130px; font-size: 30px; font-weight: bold;">
+    <div style="display: inline-block; text-align: left;">
+      <%= @estates.name %>　<%= @estates.room_number %>号室
+    </div>
+  </div>
+  <div style="text-align: center; padding-bottom: 50px; font-size: 30px; font-weight: bold;">
+    お問い合わせ一覧
+  </div>
+
   <% if @researches.present? %>
     <% @researches.each_with_index do |research, i| %>
       <div class="card shadow" style="margin-bottom: 40px; height: auto;">
@@ -14,7 +19,7 @@
             <div class="row">
               <div class="col-3">
                 <div style="font-weight: bold; ">名前</div>
-                <div><%= research.customer.name %></div>
+                <div><%= research.customer.name %> 様</div>
               </div>
               <div class="col-6">
                 <div style="font-weight: bold; ">メールアドレス</div>
