--- a/app/views/admins/researches/_research.html.erb
+++ b/app/views/admins/researches/_research.html.erb
@@ -1,8 +1,13 @@
-<div style="text-align: center; padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
-  <%= customer.name %> 様のお問い合わせ物件一覧
-</div>
-
 <div class="container" style="margin-bottom: 20px;">
+  <div style="text-align: center; word-break: break-all; overflow-wrap: break-word; padding-top: 130px; font-size: 30px; font-weight: bold;">
+    <div style="display: inline-block; text-align: left;">
+      <%= customer.name %> 様
+    </div>
+  </div>
+  <div style="text-align: center; padding-bottom: 50px; font-size: 30px; font-weight: bold;">
+    お問い合わせ物件一覧
+  </div>
+
   <% if researches.present? %>
     <% researches.each_with_index do |research, i| %>
       <div class="card shadow" style="margin-bottom: 30px; height: auto; padding-bottom: 0;">
