--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -24,7 +24,7 @@
                 賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %>
               </div><br>
               <% if customer_signed_in? %>
-                <div class="favorite_<%= estate.id %>">
+                <div id="favorite_<%= estate.id %>">
                   <%= render "customers/favorites/favorite", estate: estate %>
                 </div>
               <% else %>
