--- a/app/views/customers/favorites/_index.html.erb
+++ b/app/views/customers/favorites/_index.html.erb
@@ -22,12 +22,8 @@
               </tr>
               <tr>
                 <th>お気に入り数</th>
-                <td>
-                  <% if favorite.estate.favorited_by?(current_customer) %>
-                    <%= link_to estate_favorites_path(favorite.estate), method: :delete, local: true, style: "font-size: 22px;" do %>
-                      <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
-                    <% end %>
-                  <% end %>
+                <td id="favorite_<%= favorite.id %>">
+                  <%= render "customers/favorites/favorite-index", favorite: favorite %>
                 </td>
               </tr>
             </table>
