--- a/app/views/customers/favorites/destroy.js.erb
+++ b/app/views/customers/favorites/destroy.js.erb
@@ -1,5 +1,5 @@
-<% if @estate.present? %>
-  $("#favorite_<%= @estate.id %>").html("<%= j(render "customers/favorites/favorite", estate: @estate) %>");
+<% if @favorite_index %>
+  $("#collapseOne").html("<%= j(render "customers/favorites/index", favorites: @favorites, estate: @estate) %>");
 <% else %>
-  $("#favorite_<%= @favorite.id %>").html("<%= j(render "customers/favorites/favorite-index", favorite: @favorite) %>");
+  $("#favorite_<%= @estate.id %>").html("<%= j(render "customers/favorites/favorite", estate: @estate) %>");
 <% end %>
