--- a/app/views/admins/calendars/show.html.erb
+++ b/app/views/admins/calendars/show.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <h2 style="margin: 0 auto; font-weight: bold;">スケジュール詳細</h2>
   </div>
-  <div class="notice text-center pt-5 pb-4" style="font-size: 20px; font-weight: bold; color: #FA601A;">
+  <div class="notice text-center pt-5 pb-4" style="font-size: 20px; font-weight: bold; color: red;">
     <%= flash[:calendar_edit] %>
   </div>
 
